--- a/content/xmas/2018.md
+++ b/content/xmas/2018.md
@@ -43,7 +43,7 @@ In May, as a planned after grad celebration, Crystal, Radu, and Marina and I did
 <video autoplay loop playsinline muted poster="images/xmas/2018/wct_mp4_cover.jpg"><source src="/videos/xmas/2018/wct.mp4" type="video/mp4"><p></p></video>
 </div>
 <div class="xmas_image autoplay_mobile">
-<video autoplay loop playsinline muted poster="images/xmas/2018/wct_mp4_cover.jpg"><source src="/videos/xmas/2018/wct.mp4" type="video/mp4"><p></p></video>
+<video controls loop playsinline muted poster="images/xmas/2018/wct_mp4_cover.jpg"><source src="/videos/xmas/2018/wct.mp4" type="video/mp4"><p></p></video>
 </div>
 {{< figure src="/images/xmas/2018/wct1.jpg" alt="Crystal far in the distance on the beach" class="xmas_image" >}}
 
